fix(api): code quality corrections for model types
- CaseChannel.properties: reject null values explicitly (Map.copyOf silently threw NPE)
- WorkerContext.properties: allow null values via unmodifiableMap (more permissive)
- CaseChannelTest: add nullId validation test
- ProvisioningExceptionTest: fix isAssignableFrom direction to isInstanceOf
  Refs #153

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>